refactor: integration modules, Integrations seam, straggler cleanup (plan 018)
- git mv expansion/ → integration/ (placeholderapi, luckperms); update packages
- git mv WorldManipulateByAxiomListener → integration/axiom/
- git mv EditSessionListener → integration/worldedit/
- git mv PlayerChatInput → menu/; add PlayerQuitEvent handler to fix quit-leak
- Add Integrations class owning activate/deactivate; remove registerExpansions from plugin
- PlaceholderApiExpansion: inject SettingsService/WorldStorageImpl/Messages directly;
  split onPlaceholderRequest into settingsPlaceholder/worldPlaceholder (each <50 lines);
  add package-private test constructor
- ColorAPI: remove dead getClosestColor + COLORS map; Arrays.asList → List.of
- Add testImplementation(placeholderapi) for PlaceholderApiExpansionTest
- PlaceholderApiExpansionTest: 13 tests covering settings and world placeholder families