@@ -17,16 +17,13 @@
  */
 package de.eintosti.buildsystem.util.color;
 
-import com.google.common.collect.ImmutableMap;
 import de.eintosti.buildsystem.util.color.patterns.GradientPattern;
 import de.eintosti.buildsystem.util.color.patterns.HexPattern;
 import de.eintosti.buildsystem.util.color.patterns.RainbowPattern;
 import de.eintosti.buildsystem.util.color.patterns.SolidPattern;
 import java.awt.Color;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
-import java.util.Map;
 import net.md_5.bungee.api.ChatColor;
 import org.jetbrains.annotations.Unmodifiable;
 import org.jspecify.annotations.NullMarked;
@@ -34,31 +31,12 @@ import org.jspecify.annotations.NullMarked;
 @NullMarked
 public final class ColorAPI {
 
-    private static final Map<Color, ChatColor> COLORS = ImmutableMap.<Color, ChatColor>builder()
-            .put(new Color(0), ChatColor.getByChar('0'))
-            .put(new Color(170), ChatColor.getByChar('1'))
-            .put(new Color(43520), ChatColor.getByChar('2'))
-            .put(new Color(43690), ChatColor.getByChar('3'))
-            .put(new Color(11141120), ChatColor.getByChar('4'))
-            .put(new Color(11141290), ChatColor.getByChar('5'))
-            .put(new Color(16755200), ChatColor.getByChar('6'))
-            .put(new Color(11184810), ChatColor.getByChar('7'))
-            .put(new Color(5592405), ChatColor.getByChar('8'))
-            .put(new Color(5592575), ChatColor.getByChar('9'))
-            .put(new Color(5635925), ChatColor.getByChar('a'))
-            .put(new Color(5636095), ChatColor.getByChar('b'))
-            .put(new Color(16733525), ChatColor.getByChar('c'))
-            .put(new Color(16733695), ChatColor.getByChar('d'))
-            .put(new Color(16777045), ChatColor.getByChar('e'))
-            .put(new Color(16777215), ChatColor.getByChar('f'))
-            .build();
-
-    private static final java.util.List<String> SPECIAL_COLORS = Arrays.asList(
+    private static final List<String> SPECIAL_COLORS = List.of(
             "&l", "&n", "&o", "&k", "&m",
             "§l", "§n", "§o", "§k", "§m"
     );
 
-    private static final java.util.List<ColorPattern> PATTERNS = Arrays.asList(
+    private static final List<ColorPattern> PATTERNS = List.of(
             new GradientPattern(),
             new HexPattern(),
             new SolidPattern(),
@@ -209,25 +187,4 @@ public final class ColorAPI {
         return colors;
     }
 
-    /**
-     * Returns the closest legacy color from an RGB color
-     *
-     * @param color The color we want to transform
-     */
-    private static ChatColor getClosestColor(Color color) {
-        Color nearestColor = null;
-        double nearestDistance = Integer.MAX_VALUE;
-
-        for (Color constantColor : COLORS.keySet()) {
-            double distance = Math.pow(color.getRed() - constantColor.getRed(), 2)
-                    + Math.pow(color.getGreen() - constantColor.getGreen(), 2)
-                    + Math.pow(color.getBlue() - constantColor.getBlue(), 2);
-            if (nearestDistance > distance) {
-                nearestColor = constantColor;
-                nearestDistance = distance;
-            }
-        }
-
-        return COLORS.get(nearestColor);
-    }
 }
